@@ -6,10 +6,10 @@
         "job_name":"A Troublesome Mercenary",
         "job_description":"Sounds like Tri-Tachyon has placed a bounty on a ==particularly dangerous== mercenary they had recently hired. Apparently, this mercenary, a former Adversary fleet commander, was tasked with covertly harassing Hegemony trade convoys in hyperspace, presumably to lure the Hegemony into skirmishes with Tri-Tachyon's competitors.\nAccording to the many after-battle reports appended alongside this bounty, $heSheThey did the job a little TOO well; therefore, the Tri-Tachyon Corporation would like to provide ==a hefty payout== to whoever makes their little troublemaker \"disappear\".",
         "job_comm_reply":"\"What! I thought the Tachies told me to destroy them! They didn't tell me anything else!\"",
-        "job_intel_success":"Looks like a Tri-Tachyon representative heard word of your success, as you receive the promised payout shortly after the fight.",
+        "job_intel_success":"A Tri-Tachyon representative has heard of your success with their \"little problem\". Soon thereafter, you receive the promised payout, delivered directly to your accounts",
         "job_forFaction":"tritachyon",
         "job_credit_reward":900000,
-        "job_reputation_reward":15,
+        "job_reputation_reward":20,
         "job_type":"assassination",
         "job_show_fleet":"vanilla",
         "job_show_distance":"vanilla",
@@ -72,7 +72,9 @@
         "job_intel_success":"Not only did you get some credits for finishing the job, but it seems this former Pather had a cache of Alpha Cores with $himHerThem all along. Perhaps the operative who posted the bounty knew this too, but was afraid of being tempted by technological excess. Either way, you at least got something out of this mess.",
         "job_forFaction":"luddic_path",
         "job_credit_reward":100000,
-        "job_item_reward":{"alpha_core":3},
+        "job_item_reward":{
+            "alpha_core":3
+        },
         "job_type":"assassination",
         "job_show_fleet":"vanilla",
         "job_show_distance":"vanilla",
@@ -131,7 +133,7 @@
         "trigger_player_minLevel":15,
 
         "job_name":"An Infamous Bounty Hunter",
-        "job_description":"An Adversary bounty hunter has made a name for $himslefHerselfThemselves taking down several pirate warlords. Often called the \"Deranged Necromancer\" by the more superstitious pirates, $heIsSheIsTheyAre infamous for ==resurrecting defeated pirate ships into barely-recognizable skeletons==, sent to fight against their former owners. In a miraculous display of unity, pirates across the Sector have banded together to call for the ==complete erasure== of their dreaded archenemy; it seems that they will consider whoever accomplishes this task to be a ==savior of the pirates== and an equal to even Warlord Kanta herself.",
+        "job_description":"An Adversary bounty hunter has made a name for $himslefHerselfThemselves taking down several pirate warlords. Often called the \"Deranged Necromancer\" by the more superstitious pirates, $heIsSheIsTheyAre infamous for ==resurrecting defeated pirate ships into barely-recognizable skeletons==, sent to fight against their former owners.\nIn a miraculous display of unity, pirates across the Sector have banded together to call for the ==complete erasure== of their dreaded archenemy; it seems that they will consider whoever accomplishes this task to be a ==savior of the pirates== and an equal to even Warlord Kanta herself.",
         "job_comm_reply":"\"Ah, your ships will make a fine addition to my collection!\"",
         "job_intel_success":"News of the fleet's destruction has reached the ears of the underworld. Soon, even the most distrustful pirate captains begin to welcome and respect you as a fellow pirate warlord.",
         "job_forFaction":"pirates",
@@ -196,7 +198,7 @@
         "trigger_player_minLevel":15,
 
         "job_name":"No Deserters Left Behind",
-        "job_description":"While surveying the board, you notice a bounty sponsored by the Hegemony asking for the ==elimination of a noteworthy deserter==. The target was previously a distinguished admiral in the Hegemony Navy, with command over a mighty XIV Battlegroup fleet. Interestingly, $heSheThey personally commanded what appears to be a vanishingly-rare ==XIV modification of a Legion-class battlecarrier==. Despite holding authority over a prestigious fleet, the admiral apparently wanted to seek more glory for $himslefHerselfThemselves and has since deserted the Hegemony in favor of the Adversary. Wishing to keep the truth away from the public, the Hegemony desires that a third-party assassin ==completely eliminate any trace== of the deserter and $hisHerTheir flagship, once and for all.",
+        "job_description":"While surveying the board, you notice a bounty sponsored by the Hegemony asking for the ==elimination of a noteworthy deserter==. The target was previously a distinguished admiral in the Hegemony Navy, with command over a mighty XIV Battlegroup fleet. Interestingly, $heSheThey personally commanded what appears to be a vanishingly-rare ==XIV modification of a Legion-class battlecarrier==.\nDespite holding authority over a prestigious fleet, the admiral apparently wanted to seek more glory for $himslefHerselfThemselves and has since deserted the Hegemony in favor of the Adversary. Wishing to keep the truth away from the public, the Hegemony desires that a third-party assassin ==completely eliminate any trace== of the deserter and $hisHerTheir flagship, once and for all.",
         "job_comm_reply":"\"No, you die.\"",
         "job_intel_success":"Soon after the deserter's timely demise, a Hegemony official authorizes a massive credit transfer as a reward for your cooperation. A note from the same official also seems to suggest they will turn your battle against the deserter into an \"educational\" holo-documentary. You guess that they will use the documentary to warn new officers about the fate of would-be deserters.",
         "job_intel_failure":"Hegemony officials are alerted to your recovery of the deserter's flagship, and they are enraged. Most likely, they abhor the possibility of needing to explain - or hide - to the public how they lost a one-of-a-kind ship to some \"low-life\" scavenger.",
@@ -263,7 +265,7 @@
 
         "job_name":"A Terrible Gamble",
         "job_description":"This one is less of an actual bounty and more of a farcical challenge. For some reason, a couple of League archons collectively decided it would be \"funny\" if they posted a bounty against the ==Adversary's greatest fleet commander==, knowing full well that no sane person would actually take up on the bounty, or at least live to tell the tale. The archons have bet ==a million credits== that no one could possibly ==take down the Adversary's grand fleet==.\nWill they be proven wrong?",
-        "job_comm_reply":"The Adversary fleet commander speaks with a confident, yet weary tone, \"Another one seeking to best the Adversary's best? You would do well disengaging right now; I've had enough dealing with more spilled blood.\"",
+        "job_comm_reply":"The Adversary fleet commander speaks with a confident, yet weary tone, \"Another mindless merc seeking to best the Adversary's best? You would do well disengaging right now; I've had enough dealing with more spilled blood.\"",
         "job_intel_success":"Although you have dealt a major blow to the Adversary forces, it seems the League officials involved in the bet are upset that you actually did it. They'll attempt to slander your reputation with the Persean League at large, but at least those shady archons have begrudgingly parted with their million credits.",
         "job_forFaction":"persean",
         "job_credit_reward":1000000,
@@ -329,7 +331,7 @@
         "job_name":"Extinguishing Hope",
         "job_description":"You find a bounty targeting a well-acclaimed activist, whose name you recognize from an award-winning holodoc you watched once. Once a vice admiral of the Adversary Defense Force, this activist-commander was disheartened by the isolationist and xenophobic policies upheld by the Adversary's leading figures, and so $heSheThey had deserted $hisHerTheir prestigious post to provide humanitarian aid to desperate and struggling worlds. Most notably, $hisHerTheir ==impressive carrier detachment== provided much needed protection for traders serving the Luddic faithful, garnering widespread fame and appreciation throughout much of the Sector's population.\nJudging from this bounty's existence, however, it seems not everyone shares this same applause, as a rival Adversary commander wishes for a ==complete destruction== of this Good Samaritan's fleet. A ==ludicrous reward== awaits those who fulfill this deed, but is that really worth snuffing out one of the few remaining beacons of hope in this Sector?",
         "job_comm_reply":"\"Please, our people desire to live peacefully! Please, have you not seen what good we have done in this Ludd-forsaken Sector! Please, reconsider your choice!\"",
-        "job_intel_success":"Your actions have brought you tremendous monetary rewards, but you feel a slight chill behind your back as you consider what you have just done. You can only hope that you will not regret this later.",
+        "job_intel_success":"Your actions have brought you a tremendous monetary reward, but you feel a slight chill behind your back as you briefly consider what you have just done. You can only hope that you will not regret this later.",
         "job_forFaction":"adversary",
         "job_credit_reward":1500000,
         "job_reputation_reward":10,
@@ -392,10 +394,10 @@
         "job_name":"Hunting Down a Coward",
         "job_description":"An independent organization has requested a kill-fleet for a ==notable mercenary== who broke their contract by fleeing from their assigned bounty target. Whatever that supposed bounty target was, it must have scared off the mercenary enough for $himHerThem to abandon the organization as quickly as $heSheThey had abandoned their former commission.",
         "job_comm_reply":"\"No! No! No! You will not make me do this!\"",
-        "job_intel_success":"The mercenary's former employer has rewarded you with a bountiful amount of credits. They will also share to other independent entities about your impeccable skills in defeating the cowardly mercenary.",
+        "job_intel_success":"The mercenary's former employer has rewarded you with a precious amount of credits, and they will also share to other independent entities about your impeccable skills in defeating the cowardly mercenary.",
         "job_forFaction":"independent",
         "job_credit_reward":1200000,
-        "job_reputation_reward":35,
+        "job_reputation_reward":25,
         "job_type":"assassination",
         "job_show_fleet":"flagship",
         "job_show_distance":"vanilla",
@@ -454,11 +456,11 @@
 
         "job_name":"Rooting Out Treason",
         "job_description":"A high-ranking official from the elite Lion's Guard has placed a bounty on a \"treasonous\" commander accused of ==intentionally \"destroying\" Lion's Guard ships and equipment== and, supposedly, \"offending Andrada's sensibilities\". To avoid the obvious penalty of execution, the criminal commander had stolen most of the Guard's support ships and fled under the protection of the Adversary flag.\nThe anonymous official promises ==incomprehensible wealth and influence== for whoever wipes the target off the face of the Sector. However, one of your senior officers believes such a massive payout seems ==awfully misleading==, and suggests that you reconsider taking on the bounty.",
-        "job_comm_reply":"\"A hyena has come for my head? Know this, captain; your beast-master did not tell you everything. I suggest you scurry away right now, before the Lion's adopted cubs prey on your gullible mind.\"",
-        "job_intel_success":"You have killed the treasonous criminal, and, when your TriPad chimes with a notification alert, you find your hard-earned reward of a few million credits. However, the notification also comes with a rather shocking revelation; a significant part of the Sindrian military, unaware of the deceased commander's crimes and desertion, have noticed your apparent \"treachery\" against the Supreme Executor and, thus, have disavowed your actions.",
+        "job_comm_reply":"\"A hyena has come for my head? Know this, captain; your Lion beastmaster did not tell you everything. I suggest you scurry away right now, before their adopted cubs come to prey on your gullible mind.\"",
+        "job_intel_success":"You have taken out the treasonous criminal, and, when your TriPad chimes with a notification alert, you find the promised credit reward deposited to your accounts. However, this notification also comes with a rather shocking revelation; a significant part of the Sindrian military, unaware of the deceased commander's crimes and desertion, have noticed your apparent \"affront\" to the Supreme Executor and, thus, have disavowed your seemingly \"irrational\" actions.",
         "job_forFaction":"sindrian_diktat",
-        "job_credit_reward":2000000,
-        "job_reputation_reward":-55,
+        "job_credit_reward":1750000,
+        "job_reputation_reward":-50,
         "job_type":"assassination",
         "job_show_fleet":"vanilla",
         "job_show_distance":"vanilla",
@@ -594,7 +596,7 @@
         "job_description":"COMSEC has confirmed that Tri-Tachyon has produced yet another ==experimental Ziggurat-class hull==. Now, you have been tasked to ==destroy== this particular example once and for all.",
         "job_comm_reply":"...",
         "job_intel_success":"You have destroyed the replicated Ziggurat-class hull! Various Hegemony ministries have applauded your accomplishments, and some will even feature you as a \"hero to the Free Citizens\" in their propaganda holodocs.",
-        "job_intel_failure":"You have made a grave mistake recovering the Ziggurat-class ship, and the Hegemony now relentlessly pursues your destruction.",
+        "job_intel_failure":"You have committed a grave mistake recovering the Ziggurat-class ship, and the Hegemony now relentlessly pursues your destruction.",
         "job_forFaction":"hegemony",
         "job_credit_reward":1500000,
         "job_reputation_reward":100,
@@ -765,7 +767,7 @@
         "job_name":"Quashing the Rebellion",
         "job_description":"A rebellious population on a ==fringe Hegemony station== has declared their independence from the Hegemony. As such, the Hegemony views this insurrection as an existential threat to their overriding goals of peace and order, and so a bounty has been placed to ==purge== the population before it gets out of hand.",
         "job_comm_reply":"\"You come to take us by force? We will not back down, not now, not ever!\"",
-        "job_intel_success":"You have demolished the Rebellion's last hope, once and for all. Lying within their ruins are blueprints for a Remnant interceptor wing, truly suspicious for something found in a former Hegemony station.",
+        "job_intel_success":"You have demolished the Rebellion's last hope, once and for all. Lying within their ruins is a blueprint for a Remnant interceptor wing - a truly suspicious find for something found in a former Hegemony station.",
         "job_forFaction":"hegemony",
         "job_credit_reward":4000000,
         "job_item_reward":{
@@ -888,7 +890,7 @@
         "job_name":"Persean Supremacy",
         "job_description":"League agents have recently taken control of an ==abandoned Tri-Tachyon black-site station==, repurposing it into a makeshift headquarters of the Persean League Fleet Intelligence Service. Unfortunately for them, a displeased Tri-Tachyon director has requested a kill-fleet to ==demolish== this unauthorized use of Company property.\nWill you rise up to this challenge?",
         "job_comm_reply":"\"Hello there, spacer! Do not come any closer, or we will burn your fleet off the face of this Sector!\"",
-        "job_intel_success":"From the burning hulk of a station comes blueprints for both an Invictus-class ship and, surprisingly, a Remnant bomber wing. It seemed like the League had access to Tri-Tachyon's remaining automated arsenal and, thus, were keeping it a secret from the rest of the Sector.",
+        "job_intel_success":"From the burning hulk of a station comes a bountiful surprise: blueprints for both an Invictus-class ship and a Remnant bomber wing. It seemed like the League had access to one of Tri-Tachyon's blueprint caches and, thus, were keeping it a secret from the rest of the Sector.",
         "job_forFaction":"tritachyon",
         "job_credit_reward":8000000,
         "job_item_reward":{
@@ -949,9 +951,9 @@
         "job_comm_reply":"\"Intrusion detected: eliminate at all costs.\"",
         "job_intel_success":"The false Omega is now dead. Not a big surprise at all.",
         "job_forFaction":"remnant",
-        "job_reputation_reward":60,
+        "job_reputation_reward":55,
         "job_item_reward":{
-            "ship_bp nova":1
+            "ship_bp radiant":1
         },
         "job_type":"obliteration",
         "job_show_captain":false,
@@ -1010,12 +1012,12 @@
         "job_name":"A Paradoxical Event",
         "job_description":"A rather interesting distress signal was received from an uncharted system, presumably sent by an explorer now long-gone.\nAlthough much of the info is of little note, it does seem to contain the coordinates of another fleet ==residing in a black hole system closest to the original distress location==. ==Extreme caution is all but mandatory== for anyone looking to find - and ==take down== - this fleet.",
         "job_comm_reply":"\"Oh, it seems you have found my fleet. How fortunate - for me. Now, you die.\"",
-        "job_intel_success":"With the last enemy ship down, your remaining crew momentarily celebrate their success against nigh-impossible odds. Your extraordinary feat will, without a doubt, be heard by most of the Sector's independent and mercenary groups.\nWhat's more, your salvage team reports the recovery of many one-of-a-kind blueprints from the deceased commander's personal quarters, with most being of Lion's Guard design and one for the feared Radiant-class battleship. How these blueprints were even acquired in the first place will likely remain a lasting mystery.",
+        "job_intel_success":"With the last enemy ship down, your remaining crew momentarily celebrate their success against nigh-impossible odds. Your extraordinary feat will, without a doubt, be heard by most of the Sector's independent and mercenary groups.\nWhat's more, your salvage team reports the recovery of many one-of-a-kind blueprints from the deceased commander's personal quarters, with most being of Lion's Guard design and one for the deadly Nova-class battleship. How these blueprints were even acquired in the first place will likely remain a lasting mystery.",
         "job_forFaction":"independent",
         "job_credit_reward":0,
-        "job_reputation_reward":100,
+        "job_reputation_reward":75,
         "job_item_reward":{
-            "ship_bp radiant":1,
+            "ship_bp nova":1,
             "ship_bp eagle_LG":1,
             "ship_bp falcon_LG":1,
             "ship_bp sunder_LG":1,
